--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -1,3 +1,4 @@
+{% from "_render_elements.html" import render_messages %}
 <!DOCTYPE html>
 <html>
   <head>
@@ -39,6 +40,7 @@
     </header>
 
     <main class="container-fluid p-3">
+      {{ render_messages(messages) }}
       {% block content %}
       {% endblock %}
     </main>
