--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -29,10 +29,10 @@
               </li>
               {% else %}
               <li class="nav-item">
-                <a class="nav-link active fs-6" aria-current="page" href="{{ url_for('auth_bp.login') }}">Login</a>
+                <a class="nav-link fs-6 {% if active == 'login' %} active {% endif %}" aria-current="page" href="{{ url_for('auth_bp.login') }}">Login</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link fs-6" aria-current="page" href="{{ url_for('auth_bp.signup') }}">Sign Up</a>
+                <a class="nav-link fs-6 {% if active == 'signup' %} active {% endif %}" aria-current="page" href="{{ url_for('auth_bp.signup') }}">Sign Up</a>
               </li>
               {% endif %}
             </ul>
@@ -42,6 +42,7 @@
     </header>
 
     <main class="container py-3">
+      <!--TODO cambiar el diseño por los toasts-->
       {{ render_messages(messages) }}
       {% block content %}
       {% endblock %}
